# Remote_GO

./: LICENSE  README.md  README.zh-CN.md  go  pyproject.toml
remote_go/: __init__.py  cli.py  config.py
remote_go/core/: __init__.py  adapter.py  console.py  run_world.py
tests/: test_remote_go.py
