[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-go"
version = "0.1.0"
description = "Lightweight SSH/tmux helpers for remote GPU experiments."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["PyYAML>=6.0"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
remote-go = "remote_go.cli:main"

[tool.setuptools.packages.find]
include = ["remote_go*"]
